--- a/index.html
+++ b/index.html
@@ -41,12 +41,14 @@
         }
         .heart:active { transform: scale(1.3) rotate(5deg); }
 
+        /* Klickbare Schwäbische Wörter */
         .swabian { 
             border-bottom: 2px dotted var(--accent); 
-            cursor: help; 
+            cursor: pointer; 
             font-weight: bold; 
             color: var(--primary);
             -webkit-tap-highlight-color: transparent;
+            display: inline-block;
         }
 
         .step img { 
@@ -81,9 +83,29 @@
             background: var(--bg);
             color: var(--primary);
         }
+
+        /* Modal / Pop-up für Übersetzung */
+        #translation-modal {
+            display: none;
+            position: fixed;
+            bottom: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            background: #333;
+            color: white;
+            padding: 15px 25px;
+            border-radius: 30px;
+            font-size: 0.9rem;
+            z-index: 1000;
+            box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+            text-align: center;
+            min-width: 200px;
+        }
     </style>
 </head>
 <body>
+
+<div id="translation-modal"></div>
 
 <div class="wrapper">
     <header>
@@ -91,74 +113,91 @@
     </header>
 
     <div class="content">
-        <div class="heart" title="Druck mi fir d'Magie!">❤</div>
+        <div class="heart">❤</div>
         <h1>Fir mei Kimle ❤</h1>
         
         <p style="text-align: center; line-height: 1.6;">
-            Wie du dir des gwünscht hasch, hab i dir des Falafelrezept aufgschrieba. 
-            I han mir denkt, es isch ganz guat, wenn a bissle Schwäbisch lesa lernsch ond dabei direkt was 
-            <span class="swabian" title="Ordentliches / Richtiges">Räachts</span> zom Essa kochscht!
+            Wie du dir des gewünscht hast, hab ich dir das Falafelrezept aufgeschrieben. 
+            Ich hab mir denkt, es ist ganz gut, wenn du ein bisschen Schwäbisch lesen lernst und dabei direkt was 
+            <span class="swabian" data-trans="Ordentliches / Richtiges">Räachts</span> zum Essen <span class="swabian" data-trans="kochst">kochst</span>!
         </p>
 
         <div class="ingredients">
-            <h2>Was de brauchsch</h2>
+            <h2>Was du brauchst</h2>
             <ul>
-                <li><strong>500g</strong> <span class="swabian" title="getrocknete">druggene</span> Kichererbsen (bloß koi Dose!)</li>
-                <li>Zwiebel ond an <span class="swabian" title="eine Menge">Haufa</span> Knoblauch</li>
-                <li>Salzwasser zom <span class="swabian" title="Einlegen">Eilega</span></li>
-                <li>100g-150g Mehl (weiß) & a Pris Natron</li>
-                <li>Frischs Grünzeig aus dei'm Gärtle in Anholt</li>
+                <li><strong>500g</strong> <span class="swabian" data-trans="getrocknete">druggene</span> Kichererbsen (bloß keine Dose!)</li>
+                <li>Zwiebel und ein <span class="swabian" data-trans="eine Menge / ein Haufen">Haufa</span> Knoblauch</li>
+                <li>Salzwasser zum <span class="swabian" data-trans="Einweichen / Einlegen">Eilega</span></li>
+                <li>100g-150g Mehl & eine Prise Natron</li>
+                <li>Frisches Grünzeug aus deinem Gärtle in Anholt</li>
             </ul>
         </div>
 
         <div class="step">
-            <h2>1. Des Bad</h2>
-            <p>Lass dir Zeit! D'Kichererbsen müsset <span class="swabian" title="getrocknet">druggene</span> sei ond dann für 12 bis 24 Stond <span class="swabian" title="einweichen">eilega</span>.</p>
+            <h2>1. Das Bad</h2>
+            <p>Lass dir Zeit! Die Kichererbsen müssen <span class="swabian" data-trans="getrocknet">druggene</span> sein und dann für 12 bis 24 Stunden <span class="swabian" data-trans="einweichen">eilega</span>.</p>
             <img src="1_falafel_soaking.jpeg">
         </div>
 
         <div class="step">
-            <h2>2. Des <span class="swabian" title="Vorgang">G'schäft</span></h2>
-            <p>Jetzt kommt's auf dei <span class="swabian" title="Gefühl">G’fühl</span> an! Ab in de Mixer mit viel Wasser, damit's schee feucht isch ond <span class="swabian" title="rutscht">flutscht</span>. Lass es ruhig zwei- oder dreimal durchlaufe, damit manche Stelle schee weich sind, aber au noch a paar <span class="swabian" title="Stückchen">Bröckele</span> drinbleibet.</p>
+            <h2>2. Das <span class="swabian" data-trans="Vorgang / Geschäft">G'schäft</span></h2>
+            <p>Jetzt kommt's auf dein Gefühl an! Ab in den Mixer mit viel Wasser, damit's schön feucht ist und flutscht. Lass es ruhig zwei- oder dreimal durchlaufen, damit manche Stellen schön weich sind, aber auch noch ein paar Bröckel drin bleiben. Guck mal im Bild unten, was die Maia und ich für eine Sauerei gemacht haben, also <span class="swabian" data-trans="aufpassen">ufbassa</span>, das läuft schnell aus dem Ruder in der Küche.</p>
             <img src="2_genug_wasser.png">
             <img src="3_falafel_schweinerei.jpeg">
         </div>
 
         <div class="step">
-            <h2>3. Trockalega</h2>
-            <p>Jetzt kommt des Wasser wieder raus! Pack d'Masse in kleine, aber groß g'nuage Menge in a saubers Tuch ond dann: <span class="swabian" title="drücke, drücke, drücke">drucke, drucke, drucke!</span> Des Wasser muss ganz raus, damit d'Masse schee trocke wird.</p>
+            <h2>3. Trockenlegen</h2>
+            <p>Jetzt kommt das Wasser wieder raus! Pack die Masse in kleine, aber groß genuge Mengen in ein sauberes Tuch und dann: <span class="swabian" data-trans="drücke, drücke, drücke">drucke, drucke, drucke!</span> Das Wasser muss ganz raus, damit die Masse schön trocken wird.</p>
             <img src="4_wasser_raus.png">
         </div>
 
         <div class="step">
-            <h2>4. Würza & Forma</h2>
-            <p>Jetzt kommt des Mehl ond des Natron (oder Backpulver) dazu. Ond dann: <strong>Lass es erschtemol steha!</strong> Wenn d'Masse a Weile ruht, wird se schee fescht ond du kannsch viel bessere Bällle forma.</p>
+            <h2>4. Würzen & Formen</h2>
+            <p>Jetzt kommt das Mehl und das Natron dazu. Und dann: <strong>Lass es erst einmal stehen!</strong> Wenn die Masse eine Weile ruht, wird sie schön fest und du kannst viel bessere Bälle formen.</p>
             <img src="5_falafel_teig.jpeg">
             <img src="6_falafel_baellchen.jpeg">
         </div>
 
         <div class="step">
-            <h2>5. Ab in d'Pfann</h2>
-            <p>Holsch aus dei'm Gärtle noch was schönes Grünzeig dazu! Form dei Bällle ond <span class="swabian" title="brate">bretsch</span> se in reichlich Öl von beida Seita goldgelb an. Die kannsch direkt essa oder au später nochmal aufbacka – die schmecket emmer guat! I bin gspannt, ob es euch alle schmeckt.</p>
+            <h2>5. Ab in die Pfanne</h2>
+            <p>Hol aus deinem Gärtle noch was schönes Grünzeug dazu! Form deine Bälle und <span class="swabian" data-trans="brate">bretsch</span> sie in reichlich Öl von beiden Seiten goldgelb an. Die kannst du direkt essen oder auch später nochmal aufbacken – die schmecken immer gut! Ich bin gespannt, ob es euch allen schmeckt.</p>
             <img src="7_braten.jpeg">
         </div>
 
         <div class="sofa-moment">
-            ✨ <strong>Michael's Geheimtipp:</strong> ✨<br>
-            Am beschte schmecket d'Falafel gemeinsam auf'm Sofa. Wenn i des Rezept aufschreib, denk i emmer dra, wie mir beide dahoim g'hockt sind ond g'essa haben. Des war so schee!
+            ✨ <strong>Michaels Geheimtipp:</strong> ✨<br>
+            Am besten schmecken die Falafel gemeinsam auf dem Sofa. Wenn ich das Rezept aufschreibe, denk ich immer dran, wie wir beide daheim gehockt sind und gegessen haben. Das war so schön!
         </div>
     </div>
 
     <footer>
         G'macht mit Liebe von Michael.<br>
-        Lass es Dir schmecka, Schätzle!
+        Lass es dir schmecken, Schpäetzle!
     </footer>
 </div>
 
 <script>
+    // Magische Herz-Botschaft
     document.querySelector('.heart').addEventListener('click', function() {
-        alert("💫 ✨ 🌠\n\nDu bisch mein aller schönster Schatz!\n\nIn meim Herzle hasch de einzigartigen Platz.\nVom Magen direkt in dei Herzle nei,\nso soll mei Falafel-Liebe fir di sei!\n\n💫 ✨ 🌠");
+        alert("💫 ✨ 🌠\n\nDu bist mein aller schönster Schatz!\n\nIn meim Herzle hast du einen einzigartigen Platz.\nVom Magen direkt in dein Herzle nei,\nso soll meine Falafel-Liebe für dich sein!\n\n💫 ✨ 🌠");
     });
+
+    // Smart Click Übersetzung für Kim
+    const modal = document.getElementById('translation-modal');
+    document.querySelectorAll('.swabian').forEach(el => {
+        el.addEventListener('click', function(e) {
+            e.stopPropagation();
+            modal.innerText = this.getAttribute('data-trans');
+            modal.style.display = 'block';
+            
+            // Schließt sich nach 3 Sekunden automatisch
+            setTimeout(() => { modal.style.display = 'none'; }, 3000);
+        });
+    });
+
+    // Klick irgendwo anders schließt das Modal
+    document.addEventListener('click', () => { modal.style.display = 'none'; });
 </script>
 
 </body>
