--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
     <div class="content">
         <div class="heart" title="Druck mi fir d'Magie!">❤️</div>
-        <h1>Fir mei Kimle ❤️</h1>
+        <h1>Fir mei Kimle</h1>
         
         <p style="text-align: center; line-height: 1.6;">
             Wie du dir des gewünscht hasch, hab i dir des Falafelrezept aufgschrieba.
@@ -157,7 +157,7 @@
 
 <script>
     document.querySelector('.heart').addEventListener('click', function() {
-        alert("Du bisch mein aller schönster Schatz!\n\nIn meim Herzle hasch de einzigartigen Platz.\nVom Magen direkt in dei Herzle nei,\nso soll mei Falafel-Liebe fir di sei!\n\n❤️ 💫 ✨ 🌠");
+        alert("Du bisch mein aller schönster Schatz!\n\nIn meim Herzle hasch du en einzigartige Platz.\nVom Magen direkt in dei Herzle nei,\nso soll mei Falafel-Liebe fir di sei!\n\n❤️✨");
     });
 </script>
 
