--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
     <div class="content">
         <div class="heart">❤️</div>
-        <h1>Fir mei Kimle</h1>
+        <h1>Fir mei Kimle, ein schwäbischer Gruß</h1>
         
         <p style="text-align: center; line-height: 1.6;">
             Wie du dir des gewünscht hasch, hab i dir des Falafelrezept aufgschrieba.
