--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
         
         <p style="text-align: center; line-height: 1.6;">
             Wie du dir des gewünscht hasch, hab i dir des Falafelrezept aufgschrieba.
-            I han mir denkt, es isch ganz guat, wenn a bissle Schwäbisch lesa lernsch ond dabei direkt was 
-            <span class="swabian" data-tr="Ordentliches / Richtiges">Räachts</span> zom Essa kochscht! Da lecksch mir am Aaasch!!!
+            I han mir denkt, es isch ganz guat, wenn du a bissle Schwäbisch lesa übsch ond dabei direkt was 
+            <span class="swabian" data-tr="Ordentliches / Richtiges">Räachts</span> zom Essa kochscht! Da lecksch mi am Aaasch!!!
         </p>
 
         <div class="ingredients">
